versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Link.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalLink
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function LinkDefaultConst() &
      bind(C, name='LinkDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function LinkDefaultConst

!! Create, default
function LinkDefault() &
      bind(C, name='LinkDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function LinkDefault

!! Create, general, const
function LinkCreateConst( &
   href, &
   hrefSize &
) &
      bind(C, name='LinkCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: hrefSize
   character(c_char), intent(in) :: href(hrefSize)
   type(c_ptr) :: handle
end function LinkCreateConst

!! Create, general
function LinkCreate( &
   href, &
   hrefSize &
) &
      bind(C, name='LinkCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: hrefSize
   character(c_char), intent(in) :: href(hrefSize)
   type(c_ptr) :: handle
end function LinkCreate

!! Assign
subroutine LinkAssign(handleLHS, handleRHS) &
      bind(C, name='LinkAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine LinkAssign

!! Delete
subroutine LinkDelete(handle) &
      bind(C, name='LinkDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine LinkDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function LinkRead(handle, filename, filenameSize) &
      bind(C, name='LinkRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function LinkRead

!! Write to file
function LinkWrite(handle, filename, filenameSize) &
      bind(C, name='LinkWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function LinkWrite

!! Print to standard output, in our prettyprinting format
function LinkPrint(handle) &
      bind(C, name='LinkPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function LinkPrint

!! Print to standard output, as XML
function LinkPrintXML(handle) &
      bind(C, name='LinkPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function LinkPrintXML

!! Print to standard output, as JSON
function LinkPrintJSON(handle) &
      bind(C, name='LinkPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function LinkPrintJSON


!! -----------------------------------------------------------------------------
!! Metadatum: href
!! -----------------------------------------------------------------------------

!! Has
function LinkHrefHas(handle) &
      bind(C, name='LinkHrefHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function LinkHrefHas

!! Get
function LinkHrefGet(handle) &
      bind(C, name='LinkHrefGet') &
      result(href)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: href
end function LinkHrefGet

!! Set
subroutine LinkHrefSet(handle, href, hrefSize) &
      bind(C, name='LinkHrefSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: hrefSize
   character(c_char), intent(in) :: href(hrefSize)
end subroutine LinkHrefSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalLink
